<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">pmix</string>
	<string name="artists">Artists</string>
	<string name="playlists">Playlists</string>
	<string name="files">Files</string>
	<string name="albums">Albums</string>
	<string name="settings">Settings</string>
	<string name="volume">Volume</string>
	<string name="track">Track</string>
	<string name="ok">OK</string>
	<string name="serverAddress">Server Address :</string>

	<string name="prev">|&lt;&lt;</string>
	<string name="playpause">|&gt;</string>
	<string name="next">&gt;&gt;|</string>
	<string name="back">&lt;&lt;</string>
	<string name="forward">&gt;&gt;</string>
	<string name="progressbar_1_plus">+</string>
	<string name="progressbar_1_minus">-</string>
</resources>
